practice/the_app/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-app
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: myapp
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
