practice/the_app/app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp 
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: myapp
