practice/the_app/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - path: /interest(/|$)(.*)
          backend:
            serviceName: myapp-service
            servicePort: 80
